default/5_gemm_cublas/zvorykin_aleksandr/log.txt
/home/crazyproger/sandbox/cuda-ai-2026/default/5_gemm_cublas/zvorykin_aleksandr/gemm_cublas.cu(33): error: namespace "std" has no member "memcpy"
      std::memcpy(h_A, a.data(), dataSize);
           ^

/home/crazyproger/sandbox/cuda-ai-2026/default/5_gemm_cublas/zvorykin_aleksandr/gemm_cublas.cu(34): error: namespace "std" has no member "memcpy"
      std::memcpy(h_B, b.data(), dataSize);
           ^

/home/crazyproger/sandbox/cuda-ai-2026/default/5_gemm_cublas/zvorykin_aleksandr/gemm_cublas.cu(57): error: namespace "std" has no member "memcpy"
      std::memcpy(c.data(), h_C, dataSize);
           ^

3 errors detected in the compilation of "/home/crazyproger/sandbox/cuda-ai-2026/default/5_gemm_cublas/zvorykin_aleksandr/gemm_cublas.cu".
